--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
 <head>
-	<script src="vendor/jquery.min.js"></script>
-	<script src="vendor/randomcolor.js"></script>
-	<script src="js/functions.js"></script>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<script src="vendor/jquery.min.js"></script>
+	<script src="vendor/underscore-min.js"></script>
+	<script src="vendor/backbone-min.js"></script>
+	<script src="vendor/randomcolor.js"></script>
+	<script src="js/functions.js"></script>
 </body>
 </html>
