--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<style>
 		html,body{
-			height: 100%;
+			height: 100vh;
 			width: 100%;
 			margin: 0px;
 			padding: 0px;
 			position: absolute;
 		}
 		section{
-			height: 100%;
+			height: 100vh;
 		}
 		#one{
 			background-color: red;
@@ -41,9 +41,7 @@
 	<script type="text/javascript">
 		jQuery(document).ready(function($){
 			$("#next").click(function() {
-			    $('html,body').animate({
-			        scrollTop: $("#twi").offset().top},
-			        'slow');
+			    $('html,body').animate({scrollTop: $("#twi").offset().top},'slow');
 			});
 		});
 	</script>
