--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<style>
 		html,body{
-			height: 100vh;
+			height: 100%;
 			width: 100%;
 			margin: 0px;
 			padding: 0px;
 			position: absolute;
 		}
 		section{
-			height: 100vh;
+			height: 100%;
 		}
 		#one{
 			background-color: red;
