--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			margin: 0px;
 			padding: 0px;
 			position: absolute;
+			margin-top: -8.6%;
 		}
 		section{
 			height: 100%;
@@ -48,10 +49,10 @@
 </head>
 <body>
 	<section id="one">
-	<div id="buttons">
-		<div class="buttons"></div>
-		<div id="next" class="buttons"></div>
-	</div>
+		<div id="buttons">
+			<div class="buttons"></div>
+			<div id="next" class="buttons"></div>
+		</div>
 	</section>
 	<section id="twi">
 	</section>
