--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 			$("#debug").text(navigator.userAgent);
 			var text = "Window height: " + $(window).height() +
 					   " Document height: " + $(document).height() +
-					   " One height: " + $("#one").height();
+					   " One height: " + $("#one").height() + 
+					   " Inner height: " + window.innerHeight;
 			$("#debug2").text(text);
 		});
 	</script>
