--- a/index.html
+++ b/index.html
@@ -1,99 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-	<meta name='viewport', id='viewport', content='maximum-scale=1.0, user-scalable=no'/>
-	<style>
-		html,body{
-			height: 100%;
-			width: 100%;
-			margin: 0px;
-			padding: 0px;
-			position: absolute;
-		}
-		section{
-			height: 100%;
-		}
-		#one{
-			background-color: red;
-		}
-		#two{
-			background-color: blue;
-		}
-		#buttons{
-			height: 300px;
-			width: 100%;
-			background-color: yellow;
-			position: absolute;
-			bottom: 0;
-		}
-		.buttons{
-			height: 150px;
-			width: 100%;
-		}
-		#next{
-			background-color: #000099;
-		}
-		span{
-			font-size: 70px;
-			color: white;
-		}
-		#debug2{
-			padding-top: 10px;
-		}
-	</style>
-	<script
-	  src="https://code.jquery.com/jquery-3.1.1.min.js"
-	  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-	  crossorigin="anonymous">
-  	</script>
-	<script type="text/javascript">
-		var getIOSWindowHeight = function() {
-		    // Get zoom level of mobile Safari
-		    // Note, that such zoom detection might not work correctly in other browsers
-		    // We use width, instead of height, because there are no vertical toolbars :)
-		    var zoomLevel = document.documentElement.clientWidth / window.innerWidth;
-
-		    // window.innerHeight returns height of the visible area. 
-		    // We multiply it by zoom and get out real height.
-		    return window.innerHeight * zoomLevel;
-		};
-
-		// You can also get height of the toolbars that are currently displayed
-		var getHeightOfIOSToolbars = function() {
-		    var tH = (window.orientation === 0 ? screen.height : screen.width) -  getIOSWindowHeight();
-		    return tH > 1 ? tH : 0;
-		};
-
-		jQuery(document).ready(function($){
-			$("#next").click(function() {
-			    $('html,body').animate({scrollTop: $("#two").offset().top},'slow');
-			});
-			$("#debug").text(navigator.userAgent);
-			var text = "Window height: " + $(window).height() +
-					   " Document height: " + $(document).height() +
-					   " One height: " + $("#one").height() + 
-					   " Inner height: " + window.innerHeight + 
-					   " Screen height: " + screen.height + 
-					   " documentElement height" + document.documentElement.clientHeight +
-					   " Test height: " + $("#test").height() +
-					   " Body position / offset: " + $("body").position().top + "/" + $("body").offset().top + 
-					   " One position / offset: " + $("#one").position().top + "/" + $("#one").offset().top + 
-					   " Two position / offset: " + $("#two").position().top + "/" + $("#two").offset().top + 
-					   " TOOLBARS: " + getHeightOfIOSToolbars();
-			$("#debug2").text(text);
-		});
-	</script>
+	<title>All clear</title>
 </head>
 <body>
-	<section id="one">
-		<span id="debug"></span>
-		<span id="debug2"></span>
-		<div id="buttons">
-			<div class="buttons"></div>
-			<div id="next" class="buttons"></div>
-		</div>
-	</section>
-	<section id="two">
-	</section>
+	clear
 </body>
 </html>
