--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>trusty-vue</title>
   </head>
   <body>
     <div id="app"></div>
-  </body>
+  <script type="text/javascript" src="/manifest.f7abe984.js"></script><script type="text/javascript" src="/vendor.215d51e3.js"></script><script type="text/javascript" src="/client.a089c539.js"></script></body>
 </html>
