--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>trusty-vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-  <script type="text/javascript" src="/manifest.685e6e53.js"></script><script type="text/javascript" src="/vendor.215d51e3.js"></script><script type="text/javascript" src="/client.c7f3d3e5.js"></script></body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><title>CoreUI - Open Source Bootstrap Admin Template</title><link rel="shortcut icon" href=/static/img/favicon.png><link href=/static/css/app.f2212bbafc784708b756ea5a81422fdc.css rel=stylesheet></head><body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden"><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.ab8bcbb31a30e5f357cb.js></script><script type=text/javascript src=/static/js/app.ceb78fa063b23d737b5b.js></script></body></html>
