--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
 
     <div id="main">
 
-      <div class="coupon">
-        <div class="right">
-          领取后买单时使用
-        </div>
-        <div class="left">
+      <a class="coupon" href="https://render.alipay.com/p/h5/discoverweb/www/couponDetail.html?areaCode=510020180228110000000004102000302485036&areaType=SHOP&isFromShopDetail=false&promoId=208800020180613110000000060088000500243648">
+        <div>
           <img src="c1.jpeg">
         </div>
-      </div>
+      </a>
 
       <p>
       用户使用支付宝手机客户端（限7.7 及以上版本）领取L'Etoile专属代金券，在L'Etoile的俄罗斯所有店使用支付宝付款，立享85折，最高立減15元人民币。代金券在领取后15天内有效, 同一用户在L'Etoile所有门店仅限使用一次。活动时间：从即日起至2018年6月30日。更多活动详情请领券后查看详细说明。
@@ -28,14 +25,11 @@
 
       <br/>
 
-      <div class="coupon">
-        <div class="right">
-          领取后买单时使用
-        </div>
-        <div class="left">
+      <a class="coupon" href="#">
+        <div>
           <img src="c2.jpeg">
         </div>
-      </div>
+      </a>
 
       <p>
       用户在支付宝手机客户端领取L'Etoile“买二增一”券，买单时点击使用按钮兑换特惠赠品。限指定商品使用，数量有限，先到先得。活动时间：即日起至6月30日。”
@@ -64,6 +58,7 @@
     <style>
       html, body {
         margin: 0;
+        color: #393838;
         padding: 0;
       }
       #head_img {
@@ -77,12 +72,14 @@
       }
 
       #main {
-        padding: 5px;
+        padding: 8px;
       }
 
       .coupon {
+        display: block;
         background-image: url('coupon.png');
         background-size: 100% 100%;
+        padding: 2px;
       }
 
       .left {
@@ -97,8 +94,14 @@
         width: 20%;
       }
 
+      .coupon div {
+        width: 72%;
+        text-align: center;
+        padding-top: 4px;
+      }
+
       .coupon img{
-        width: 70%;
+        width: 80%;
       }
 
       .bottom img {
