--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       }
 
       #head_title {
-        margin-top: -50px;
+        font-size: 20px;
+        margin-top: -60px;
         padding: 5px;
         color: white;
       }
