--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <br/>
 
         <div class="bottom">
+          <img src="c5.jpeg" />
           20多年来，数百万名俄罗斯顾客在知名美妆连锁L'Etoile购物，相信品牌能为顾客提供高端、品种丰富的商品，及优质服务。L'Etoile在俄罗斯全国共开设超过1000家连锁门店，为理想的美妆购物提供优质美妙的场景。
           <br/>
           <img src="c3.jpeg" />
@@ -51,7 +52,7 @@
           现L'Etoile全国所有门店已全线开通支付宝支付。第一次在L'Etoile购物时使用支付宝的顾客可获得常客优惠卡，并限期享受高达八五折的折扣! 
           <br/>
           L'Etoile重视每一位顾客，这是品牌的重要亮点。每月L'Etoile会定期举行优惠活动，让顾客享受更多特价产品和特惠折扣。
-          <img src="c5.jpeg" />
+          <img src="c6.jpg" />
         </div>
 
       </div>
