--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
       <div id="main">
 
         <a class="coupon" href="https://render.alipay.com/p/h5/discoverweb/www/couponDetail.html?areaCode=510020180228110000000004102000302485036&areaType=SHOP&isFromShopDetail=false&promoId=208800020180613110000000060088000500243648">
-          <div>
-            <img src="c1.jpeg">
-          </div>
+          <img src="c1.png">
         </a>
 
         <p>
@@ -26,10 +24,8 @@
 
         <br/>
 
-        <a class="coupon" href="#">
-          <div>
-            <img src="c2.jpeg">
-          </div>
+        <a class="coupon" href="https://render.alipay.com/p/h5/discoverweb/www/couponDetail.html?areaCode=510020180228110000000004102003302483460&areaType=SHOP&isFromShopDetail=false&promoId=510020180613110000000016102006800545390000000000000000000000000000000">
+          <img src="c2.png">
         </a>
 
         <p>
@@ -62,6 +58,7 @@
       html, body {
         margin: 0;
         color: #393838;
+        background-color: lightgrey;
         padding: 0;
       }
 
@@ -86,7 +83,6 @@
 
       .coupon {
         display: block;
-        background-image: url('coupon.png');
         background-size: 100% 100%;
         padding: 2px;
       }
@@ -110,7 +106,10 @@
       }
 
       .coupon img{
-        width: 80%;
+        border-radius: 5px 5px 5px 5px; 
+        -moz-border-radius: 5px 5px 5px 5px; 
+        -webkit-border-radius: 5px 5px 5px 5px; 
+        width: 100%;
       }
 
       .bottom img {
