--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <div id="wrapper">
       <img src="head.jpeg" id="head_img"/>
       <div id="head_title">
-        L’Etoile 
-        <br/>
-        美妆购物之乐
+        <div>
+          L’Etoile 
+          <br/>
+          美妆购物之乐
+        </div>
       </div>
 
       <div id="main">
@@ -70,11 +72,14 @@
       #head_title {
         font-size: 20px;
         margin-top: -62px;
-        padding: 5px;
         position: absolute;
         background: rgba(0, 0, 0, 0.3);
         width: 100%;
         color: white;
+      }
+
+      #head_title div {
+        padding: 5px;
       }
 
       #main {
