--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <style>
       html, body {
         margin: 0;
-        color: #393838;
+        color: #f6f6f6;
         background-color: lightgrey;
         padding: 0;
       }
