--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <style>
       html, body {
         margin: 0;
-        color: #f6f6f6;
-        background-color: lightgrey;
+        color: black;
+        background-color: #f6f6f6;
         padding: 0;
       }
 
