--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <style>
       html, body {
         margin: 0;
-        color: black;
+        color: #757373;
         background-color: #f6f6f6;
         padding: 0;
       }
