--- a/index.html
+++ b/index.html
@@ -4,134 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="wrapper">
-      <img src="head.jpeg" id="head_img"/>
-      <div id="head_title">
-        <div>
-          L’Etoile 
-          <br/>
-          美妆购物之乐
-        </div>
-      </div>
-
-      <div id="main">
-
-        <a class="coupon" href="https://render.alipay.com/p/h5/discoverweb/www/couponDetail.html?areaCode=510020180228110000000004102000302485036&areaType=SHOP&isFromShopDetail=false&promoId=208800020180613110000000060088000500243648">
-          <img src="c1.png">
-        </a>
-
-        <p>
-        用户使用支付宝手机客户端（限7.7 及以上版本）领取L'Etoile专属代金券，在L'Etoile的俄罗斯所有店使用支付宝付款，立享85折，最高立減15元人民币。代金券在领取后15天内有效, 同一用户在L'Etoile所有门店仅限使用一次。活动时间：从即日起至2018年6月30日。更多活动详情请领券后查看详细说明。
-        </p>
-
-        <br/>
-
-        <a class="coupon" href="https://render.alipay.com/p/h5/discoverweb/www/couponDetail.html?areaCode=510020180228110000000004102003302483460&areaType=SHOP&isFromShopDetail=false&promoId=510020180613110000000016102006800545390000000000000000000000000000000">
-          <img src="c2.png">
-        </a>
-
-        <p>
-        用户在支付宝手机客户端领取L'Etoile“买二增一”券，买单时点击使用按钮兑换特惠赠品。限指定商品使用，数量有限，先到先得。活动时间：即日起至6月30日。”
-        </p>
-
-        <br/>
-        <br/>
-
-        <div class="bottom">
-          <img src="c5.jpeg" />
-          20多年来，数百万名俄罗斯顾客在知名美妆连锁L'Etoile购物，相信品牌能为顾客提供高端、品种丰富的商品，及优质服务。L'Etoile在俄罗斯全国共开设超过1000家连锁门店，为理想的美妆购物提供优质美妙的场景。
-          <br/>
-          <img src="c3.jpeg" />
-          进入L'Etoile后，顾客能立即享受到高端美妆顾问的迎接。美妆顾问会根据每位顾客的皮肤特点，帮助客户挑选最合适的美妆产品，推荐送给亲友的礼物，介绍如何使用美妆产品，提出相关建议，讲解最潮流的美妆时尚趋势。更重要的是，顾客还可以在L'Etoile试用美妆品或得到赠送的商品小样。
-          <br/>
-          <img src="c4.jpeg" />
-          L'Etoile为顾客提供了300个品牌的商品，代表着欧洲、美国、亚洲和俄罗斯美容化妆品品牌方，其中拥有100多个品牌在俄罗斯的独家销售权。许多品牌采用天然原料，符合最严格的质量标准。
-          <br/>
-          现L'Etoile全国所有门店已全线开通支付宝支付。第一次在L'Etoile购物时使用支付宝的顾客可获得常客优惠卡，并限期享受高达八五折的折扣! 
-          <br/>
-          L'Etoile重视每一位顾客，这是品牌的重要亮点。每月L'Etoile会定期举行优惠活动，让顾客享受更多特价产品和特惠折扣。
-          <img src="c6.jpg" />
-        </div>
-
-      </div>
-    </div>
-
+    <img src="new.jpg" />
     <style>
-      html, body {
-        margin: 0;
-        color: #757373;
-        background-color: #f6f6f6;
+      body, html {
         padding: 0;
+        margin: 0;
       }
-
-
-      #head_img {
-        width: 100%;
+      img {
+        width: 100vw;
       }
-
-      #head_title {
-        font-size: 20px;
-        margin-top: -62px;
-        position: absolute;
-        background: rgba(0, 0, 0, 0.3);
-        width: 100%;
-        color: white;
-      }
-
-      #head_title div {
-        padding: 5px;
-      }
-
-      #main {
-        padding: 8px;
-      }
-
-      .coupon {
-        display: block;
-        background-size: 100% 100%;
-        padding: 2px;
-      }
-
-      .left {
-        width: 80%;
-        text-align: center;
-      }
-
-      .right {
-        color: white;
-        float: right;
-        padding-top: 8px;
-        width: 20%;
-      }
-
-      .coupon div {
-        width: 72%;
-        text-align: center;
-        padding-top: 4px;
-      }
-
-      .coupon img{
-        border-radius: 5px 5px 5px 5px; 
-        -moz-border-radius: 5px 5px 5px 5px; 
-        -webkit-border-radius: 5px 5px 5px 5px; 
-        width: 100%;
-      }
-
-      .bottom img {
-        width: 100%;
-      }
-
-      @media only screen 
-      and (min-device-width: 600px) {
-        #wrapper {
-          width: 600px;
-          margin: 0 auto;
-        }
-        #head_title{
-          width: 580px;
-        }
-      }
-
     </style>
   </body>
 </html>
