--- a/index.html
+++ b/index.html
@@ -1,111 +1,144 @@
-<!doctype html>
+﻿<!DOCTYPE html>
 <html>
-<body>
-  <div id="bg">
-    <div id="planet1">
-    </div>
-    <div id="center">
-    </div>
-    <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg" id="svg">
-      <defs>
-        <radialGradient id="gradient" cx="0%" cy="50%" r="100%">
-          <stop offset="0%" stop-color="gold" stop-opacity="0.7"/>
-          <stop offset="95%" stop-color="green" stop-opacity="0.3"/>
-        </radialGradient>
-      </defs>
-      <g transform="rotate(0 100 100)" id="path_transform">
-        <path d="M100 0 C-20 30, -20 170, 100 200 L200 200 L200 0 L0 0 " fill="url(#gradient)"  id="path" />
-      </g>
-    </svg>
-  </div>
-<style>
-  #bg, body {
-    width: 100vw;
-    height: 100vh;
-    background-color: black;
-  }
 
-  #planet1 {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background: #40d2101f;
-    clip-path: url(#svg); 
-  }
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CV</title>
+  <link rel="stylesheet" href="https://stackedit.io/style.css" />
+</head>
 
-  #center {
-    background: white;
-    position: absolute;
-    width: 5px;
-    height: 5px;
-  }
-  #svg {
-    clip-path: circle(50%);
-  }
-</style>
-<script>
-  const svg = document.getElementById('path');
-  const centerDiv = document.getElementById('center');
-  const pathTransform = document.getElementById('path_transform');
-  const gradient = document.getElementById('gradient');
-  const r = 100;
-  const gcenter = {x: -50, y: r};
+<body class="stackedit">
+  <div class="stackedit__html"><h4 id="primary">Primary</h4>
 
+<table>
+<thead>
+<tr>
+<th>About</th>
+<th>Technical skills</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Lopan Anton (29 y/o)</td>
+<td>Linux 8 year: bash, nginx, ssl, docker, kubernetes</td>
+</tr>
+<tr>
+<td>Education - 2007 - 2012 Computer science BS</td>
+<td>Imperative programming: Javascript, Golang, PHP, Java</td>
+</tr>
+<tr>
+<td>Current Location - Russia, Tyumen</td>
+<td>Functional programming 3 year: Javascript, Erlang, Haskell</td>
+</tr>
+<tr>
+<td>Relocate - ok</td>
+<td>Frontend skills: HTML, Grids, Vue, Canvas &amp; Animation, SVG</td>
+</tr>
+<tr>
+<td>GitHub <a href="https://github.com/youaresofunny">@youaresofunny</a></td>
+<td>DBs and Brokers: Postgres, Mysql, Mongo, NSQ, Redis, RabbitMQ</td>
+</tr>
+<tr>
+<td>Telegram <a href="https://t.me/iamgig">@iamgig</a></td>
+<td>APIs: Bitshares, Binance, Bitmex, Telegram, WeChat, Instagram, …</td>
+</tr>
+<tr>
+<td>Instagram <a href="http://instagram.com/anlopan">@anlopan</a></td>
+<td>Code review, TDD, Refactoring, Optimization, Git flow</td>
+</tr>
+<tr>
+<td>Email <a href="mailto:anlopan@gmail.com">anlopan@gmail.com</a></td>
+<td>Opensource contribution</td>
+</tr>
+</tbody>
+</table><h4 id="timeline">Timeline</h4>
+<ul>
+<li>
+<p>2011 <a href="http://elarea.ru">elarea.ru</a> -  <strong>full-stack developer</strong></p>
+<ul>
+<li>Custom PHP E-Commerce framework development</li>
+<li>Responsive HTML, Css, jQuery</li>
+<li>Infrastructure administration ( ftp mostly )</li>
+</ul>
+</li>
+<li>
+<p>2012-2013 <a href="http://etagi.com">etagi.com</a> <strong>full-stack developer</strong></p>
+<ul>
+<li>Wordpress based enterprise ACM system development</li>
+<li>Business process automation and optimization</li>
+<li>Manage tasks for freelancers</li>
+</ul>
+</li>
+<li>
+<p>2014 <a href="http://Site4all.ru">Site4all.ru</a> <strong>project manager</strong></p>
+<ul>
+<li>Managing small web development teams (up to 5 people )</li>
+<li>Prototyping</li>
+<li>Flow management [Client brief -&gt; Design -&gt; Programming -&gt; Content]</li>
+</ul>
+</li>
+<li>
+<p>2014 <a href="http://Netology.ru">Netology.ru</a> <strong>full-stack developer</strong></p>
+<ul>
+<li>Partner cabinet development</li>
+</ul>
+</li>
+<li>
+<p>2015 ICONIC mobile <strong>techincal lead</strong></p>
+<ul>
+<li>Full stack mobile apps development (Android, Spring, Erlang, C++)</li>
+<li>Manage freelancers</li>
+<li>Infrastructure administration ( git hosting, ssh, daemons )</li>
+</ul>
+</li>
+<li>
+<p>2016-2019 Trendever &amp; Trusty.fund <strong>CTO</strong></p>
+<ul>
+<li>Lead development and code review (Golang, Vue, Nodejs)</li>
+<li>Recruiting</li>
+<li>Communicate with open source communities (Bitshares, Instagram)</li>
+<li>Reverse Engenering ( instagram private api)</li>
+<li>Infrastructure administration ( 15 services, docker )</li>
+</ul>
+</li>
+<li>
+<p>2019 Benice.tools <strong>CTO</strong></p>
+<ul>
+<li>New way to perform telegram bots invented</li>
+<li>Communicate with open source communities (Binance, Telegram)</li>
+<li>Infrastructure administration ( 10 services with replication, kubernetes )</li>
+</ul>
+</li>
+</ul>
+<h4 id="extras">Extras</h4>
 
-  let leftPoint = -32;
-  let leftPoint2 = -64;
-  let topPoint = 0;
-  let gradientPoint = -50;
-  let moveRight = true;
-  let moveBot = true;
-  function step(rightSide) {
-    return (timestamp) => {
-      if (moveRight) {
-        if (leftPoint < 232) {
-          leftPoint++;
-          gradientPoint+= 0.34;
-        } else {
-          moveRight = false;
-        }
-      } else {
-        if (leftPoint2 < 240) {
-          leftPoint2++;
-          gradientPoint+= 0.4;
-        }
-      }
-
-      if (moveBot) {
-        if (topPoint < 50) {
-          topPoint += 0.5;
-        } else {
-          moveBot = false;
-        }
-      } else {
-        if (topPoint < 0) {
-          moveBot = false;
-        } else {
-          topPoint -= 0.5;
-        }
-      }
-      //console.log('Letft:', leftPoint);
-      //console.log('Top:', topPoint);
-      //pathTransform.setAttribute('transform', `rotate(${gradientPoint} 100 100)`);
-      if (rightSide) {
-        svg.setAttribute('d', `M0 0 L100 0, C${leftPoint} ${topPoint}, ${leftPoint} ${200-topPoint} 100 200, L0 200, L0 0`)
-      } else {
-        svg.setAttribute('d', `M100 0 C${leftPoint2} ${topPoint}, ${leftPoint2} ${200-topPoint} 100 200 L200 200 L200 0 L0 0 `)
-      }
-      gradient.setAttribute('cx', `${gradientPoint}%`);
-      console.log(timestamp);
-      if (timestamp < 5000) {
-        window.requestAnimationFrame(step(true));
-      } else if (timestamp < 10000) {
-        window.requestAnimationFrame(step(false));
-      }
-    }
-  }
-  window.requestAnimationFrame(step(true));
-</script>
+<table>
+<thead>
+<tr>
+<th>Achivements</th>
+<th>Strengths</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Esoteric programming in notebook for fun (brainfuck, whitespace)</td>
+<td>Love to code</td>
+</tr>
+<tr>
+<td>Made 2000+ contributions into opensource repositories</td>
+<td>Learn fast x2</td>
+</tr>
+<tr>
+<td>Decentralised worker <a href="https://www.bitshares.foundation/workers/2018-08-trusty-community-ui-p1">participation</a></td>
+<td>Strong Analyst</td>
+</tr>
+<tr>
+<td>Indonesian waste problem solve <a href="https://github.com/MPH-Bali">participation</a></td>
+<td>Motivation over results</td>
+</tr>
+</tbody>
+</table></div>
 </body>
+
 </html>
