--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <td>Learn fast x2</td>
 </tr>
 <tr>
-<td>Decentralised worker <a href="https://www.bitshares.foundation/workers/2018-08-trusty-community-ui-p1">participation</a></td>
+<td>Decentralised worker <a href="https://web.archive.org/web/20200518114721/https://www.bitshares.foundation/workers/2018-08-trusty-community-ui-p1">participation</a></td>
 <td>Strong Analyst</td>
 </tr>
 <tr>
