--- a/index.html
+++ b/index.html
@@ -9,136 +9,149 @@
 </head>
 
 <body class="stackedit">
-  <div class="stackedit__html"><h4 id="primary">Primary</h4>
+  <div class="stackedit__html">
+    <h4 id="primary">Primary</h4>
 
-<table>
-<thead>
-<tr>
-<th>About</th>
-<th>Technical skills</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Lopan Anton (29 y/o)</td>
-<td>Linux 8 year: bash, nginx, ssl, docker, kubernetes</td>
-</tr>
-<tr>
-<td>Education - 2007 - 2012 Computer science BS</td>
-<td>Imperative programming: Javascript, Golang, PHP, Java</td>
-</tr>
-<tr>
-<td>Current Location - Russia, Tyumen</td>
-<td>Functional programming 3 year: Javascript, Erlang, Haskell</td>
-</tr>
-<tr>
-<td>Relocate - ok</td>
-<td>Frontend skills: HTML, Grids, Vue, Canvas &amp; Animation, SVG</td>
-</tr>
-<tr>
-<td>GitHub <a href="https://github.com/youaresofunny">@youaresofunny</a></td>
-<td>DBs and Brokers: Postgres, Mysql, Mongo, NSQ, Redis, RabbitMQ</td>
-</tr>
-<tr>
-<td>Telegram <a href="https://t.me/iamgig">@iamgig</a></td>
-<td>APIs: Bitshares, Binance, Bitmex, Telegram, WeChat, Instagram, …</td>
-</tr>
-<tr>
-<td>Instagram <a href="http://instagram.com/anlopan">@anlopan</a></td>
-<td>Code review, TDD, Refactoring, Optimization, Git flow</td>
-</tr>
-<tr>
-<td>Email <a href="mailto:anlopan@gmail.com">anlopan@gmail.com</a></td>
-<td>Opensource contribution</td>
-</tr>
-</tbody>
-</table><h4 id="timeline">Timeline</h4>
-<ul>
-<li>
-<p>2011 <a href="http://elarea.ru">elarea.ru</a> -  <strong>full-stack developer</strong></p>
-<ul>
-<li>Custom PHP E-Commerce framework development</li>
-<li>Responsive HTML, Css, jQuery</li>
-<li>Infrastructure administration ( ftp mostly )</li>
-</ul>
-</li>
-<li>
-<p>2012-2013 <a href="http://etagi.com">etagi.com</a> <strong>full-stack developer</strong></p>
-<ul>
-<li>Wordpress based enterprise ACM system development</li>
-<li>Business process automation and optimization</li>
-<li>Manage tasks for freelancers</li>
-</ul>
-</li>
-<li>
-<p>2014 <a href="http://Site4all.ru">Site4all.ru</a> <strong>project manager</strong></p>
-<ul>
-<li>Managing small web development teams (up to 5 people )</li>
-<li>Prototyping</li>
-<li>Flow management [Client brief -&gt; Design -&gt; Programming -&gt; Content]</li>
-</ul>
-</li>
-<li>
-<p>2014 <a href="http://Netology.ru">Netology.ru</a> <strong>full-stack developer</strong></p>
-<ul>
-<li>Partner cabinet development</li>
-</ul>
-</li>
-<li>
-<p>2015 ICONIC mobile <strong>techincal lead</strong></p>
-<ul>
-<li>Full stack mobile apps development (Android, Spring, Erlang, C++)</li>
-<li>Manage freelancers</li>
-<li>Infrastructure administration ( git hosting, ssh, daemons )</li>
-</ul>
-</li>
-<li>
-<p>2016-2019 Trendever &amp; Trusty.fund <strong>CTO</strong></p>
-<ul>
-<li>Lead development and code review (Golang, Vue, Nodejs)</li>
-<li>Recruiting</li>
-<li>Communicate with open source communities (Bitshares, Instagram)</li>
-<li>Reverse Engenering ( instagram private api)</li>
-<li>Infrastructure administration ( 15 services, docker )</li>
-</ul>
-</li>
-<li>
-<p>2019 Benice.tools <strong>CTO</strong></p>
-<ul>
-<li>New way to perform telegram bots invented</li>
-<li>Communicate with open source communities (Binance, Telegram)</li>
-<li>Infrastructure administration ( 10 services with replication, kubernetes )</li>
-</ul>
-</li>
-</ul>
-<h4 id="extras">Extras</h4>
+    <table>
+      <thead>
+        <tr>
+          <th>About</th>
+          <th>Technical skills</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Lopan Anton (29 y/o)</td>
+          <td>Linux 8 year: bash, nginx, ssl, docker, kubernetes</td>
+        </tr>
+        <tr>
+          <td>Education - 2007 - 2012 Computer science BS</td>
+          <td>Imperative programming: Javascript, Golang, PHP, Java</td>
+        </tr>
+        <tr>
+          <td>Current Location - Russia, Tyumen</td>
+          <td>Functional programming 3 year: Javascript, Erlang, Haskell</td>
+        </tr>
+        <tr>
+          <td>Relocate - ok</td>
+          <td>Frontend skills: HTML, Grids, Vue, Canvas &amp; Animation, SVG</td>
+        </tr>
+        <tr>
+          <td>GitHub <a href="https://github.com/youaresofunny">@youaresofunny</a></td>
+          <td>DBs and Brokers: Postgres, Mysql, Mongo, NSQ, Redis, RabbitMQ</td>
+        </tr>
+        <tr>
+          <td>Telegram <a href="https://t.me/iamgig">@iamgig</a></td>
+          <td>APIs: Bitshares, Binance, Bitmex, Telegram, WeChat, Instagram, …</td>
+        </tr>
+        <tr>
+          <td>Instagram <a href="http://instagram.com/anlopan">@anlopan</a></td>
+          <td>Code review, TDD, Refactoring, Optimization, Git flow</td>
+        </tr>
+        <tr>
+          <td>Email <a href="mailto:anlopan@gmail.com">anlopan@gmail.com</a></td>
+          <td>Opensource contribution</td>
+        </tr>
+      </tbody>
+    </table>
+    <h4 id="timeline">Timeline</h4>
+    <ul>
+      <li>
+        <p>2011 <a href="http://elarea.ru">elarea.ru</a> - <strong>full-stack developer</strong></p>
+        <ul>
+          <li>Custom PHP E-Commerce framework development</li>
+          <li>Responsive HTML, Css, jQuery</li>
+          <li>Infrastructure administration ( ftp mostly )</li>
+        </ul>
+      </li>
+      <li>
+        <p>2012-2013 <a href="http://etagi.com">etagi.com</a> <strong>full-stack developer</strong></p>
+        <ul>
+          <li>Wordpress based enterprise ACM system development</li>
+          <li>Business process automation and optimization</li>
+          <li>Manage tasks for freelancers</li>
+        </ul>
+      </li>
+      <li>
+        <p>2014 <a href="http://Site4all.ru">Site4all.ru</a> <strong>project manager</strong></p>
+        <ul>
+          <li>Managing small web development teams (up to 5 people )</li>
+          <li>Prototyping</li>
+          <li>Flow management [Client brief -&gt; Design -&gt; Programming -&gt; Content]</li>
+        </ul>
+      </li>
+      <li>
+        <p>2014 <a href="http://Netology.ru">Netology.ru</a> <strong>Full-stack developer</strong></p>
+        <ul>
+          <li>Partner cabinet development</li>
+        </ul>
+      </li>
+      <li>
+        <p>2015 ICONIC mobile <strong>Techincal lead</strong></p>
+        <ul>
+          <li>Full stack mobile apps development (Android, Spring, Erlang, C++)</li>
+          <li>Manage freelancers</li>
+          <li>Infrastructure administration ( git hosting, ssh, daemons )</li>
+        </ul>
+      </li>
+      <li>
+        <p>2016-2019 Trendever &amp; Trusty.fund <strong>CTO</strong></p>
+        <ul>
+          <li>Lead development and code review (Golang, Vue, Nodejs)</li>
+          <li>Recruiting</li>
+          <li>Communicate with open source communities (Bitshares, Instagram)</li>
+          <li>Reverse Engenering ( instagram private api)</li>
+          <li>Infrastructure administration ( 15 services, docker )</li>
+        </ul>
+      </li>
+      <li>
+        <p>2019 Benice.tools <strong>CTO</strong></p>
+        <ul>
+          <li>New way to perform telegram bots invented</li>
+          <li>Communicate with open source communities (Binance, Telegram)</li>
+          <li>Infrastructure administration ( 10 services with replication, kubernetes )</li>
+        </ul>
+      </li>
+      <li>
+        <p>2020-2021 <a href="https://peerboard.com">Peerboard</a> <strong>Principal full stack engineer</strong></p>
+        <ul>
+          <li>Develop platform from scratch (Go, GraphQL, Typescript React)</li>
+          <li>Embed site technologies research</li>
+          <li>Domain connect automatization</li>
+        </ul>
+      </li>
+    </ul>
+    <h4 id="extras">Extras</h4>
 
-<table>
-<thead>
-<tr>
-<th>Achivements</th>
-<th>Strengths</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Esoteric programming in notebook for fun (brainfuck, whitespace)</td>
-<td>Love to code</td>
-</tr>
-<tr>
-<td>Made 2000+ contributions into opensource repositories</td>
-<td>Learn fast x2</td>
-</tr>
-<tr>
-<td>Decentralised worker <a href="https://web.archive.org/web/20200518114721/https://www.bitshares.foundation/workers/2018-08-trusty-community-ui-p1">participation</a></td>
-<td>Strong Analyst</td>
-</tr>
-<tr>
-<td>Indonesian waste problem solve <a href="https://github.com/MPH-Bali">participation</a></td>
-<td>Motivation over results</td>
-</tr>
-</tbody>
-</table></div>
+    <table>
+      <thead>
+        <tr>
+          <th>Achivements</th>
+          <th>Strengths</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Esoteric programming in notebook for fun (brainfuck, whitespace)</td>
+          <td>Love to code</td>
+        </tr>
+        <tr>
+          <td>Made 2000+ contributions into opensource repositories</td>
+          <td>Learn fast x2</td>
+        </tr>
+        <tr>
+          <td>Decentralised worker <a
+              href="https://web.archive.org/web/20200518114721/https://www.bitshares.foundation/workers/2018-08-trusty-community-ui-p1">participation</a>
+          </td>
+          <td>Strong Analyst</td>
+        </tr>
+        <tr>
+          <td>Indonesian waste problem solve <a href="https://github.com/MPH-Bali">participation</a></td>
+          <td>Motivation over results</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </body>
 
 </html>
