--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
       <tbody>
         <tr>
           <td>Lopan Anton (32 y/o)</td>
-          <td>Linux 10 year: bash, nginx, ssl, docker, kubernetes</td>
+          <td>Linux [10] year: bash, nginx, ssl, docker, kubernetes, sed ..</td>
         </tr>
         <tr>
           <td>Education - 2007 - 2012 Computer science BS</td>
-          <td>Imperative programming: Javascript, Golang, PHP, Java</td>
+          <td>Golang [7], TypeScript [4], node [6], Erlang, PHP, C ..</td>
         </tr>
         <tr>
           <td>Current Location - Russia, Tyumen</td>
-          <td>Functional programming 3 year: Javascript, Erlang, Haskell</td>
+          <td>Functional, DDD, OOP, CI, CD ...</td>
         </tr>
         <tr>
           <td>Relocate - ok</td>
-          <td>Frontend skills: HTML, Grids, Vue, Canvas &amp; Animation, SVG</td>
+          <td>Frontend skills: HTML, Grids, React, Vue, Canvas, Animation, SVG ..</td>
         </tr>
         <tr>
           <td>GitHub <a href="https://github.com/youaresofunny">@youaresofunny</a></td>
@@ -42,15 +42,15 @@
         </tr>
         <tr>
           <td>Telegram <a href="https://t.me/iamgig">@iamgig</a></td>
-          <td>APIs: Bitshares, Binance, Bitmex, Telegram, WeChat, Instagram, …</td>
+          <td>APIs: Bitshares, Binance, Bitmex, Telegram, WeChat, Instagram ..</td>
         </tr>
         <tr>
           <td>Instagram <a href="http://instagram.com/anlopan">@anlopan</a></td>
-          <td>Code review, TDD, Refactoring, Optimization, Git flow</td>
+          <td>Code review, TDD, Refactoring, Optimization, Automatization, Git flow ..</td>
         </tr>
         <tr>
           <td>Email <a href="mailto:anlopan@gmail.com">anlopan@gmail.com</a></td>
-          <td>Opensource contribution</td>
+          <td>New stacks investigation, opensource contribute</td>
         </tr>
       </tbody>
     </table>
