--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <td>Golang [7], TypeScript [4], node [6], Erlang, PHP, C ..</td>
         </tr>
         <tr>
-          <td>Current Location - Russia, Tyumen</td>
+          <td>Current Location - Georgia, Tbilisi</td>
           <td>Functional, DDD, OOP, CI, CD ...</td>
         </tr>
         <tr>
@@ -50,7 +50,7 @@
         </tr>
         <tr>
           <td>Email <a href="mailto:anlopan@gmail.com">anlopan@gmail.com</a></td>
-          <td>New stacks investigation, opensource contribute</td>
+          <td>Research, Opensource</td>
         </tr>
       </tbody>
     </table>
