--- a/index.html
+++ b/index.html
@@ -11,34 +11,33 @@
 <body class="stackedit">
   <div class="stackedit__html">
     <h4 id="primary">Primary</h4>
-
     <table>
       <thead>
         <tr>
           <th>About</th>
-          <th>Technical skills</th>
+          <th>Skills</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>Lopan Anton (32 y/o)</td>
-          <td>Linux [10] year: bash, nginx, ssl, docker, kubernetes, sed ..</td>
+          <td>Lopan Anton (33 y/o)</td>
+          <td>INFP-T</td>
         </tr>
         <tr>
           <td>Education - 2007 - 2012 Computer science BS</td>
-          <td>Golang [7], TypeScript [4], node [6], Erlang, PHP, C ..</td>
+          <td>Linux[10], Go [7], TypeScript [4], node [6], Erlang, PHP, C ..</td>
         </tr>
         <tr>
           <td>Current Location - Georgia, Tbilisi</td>
-          <td>Functional, DDD, OOP, CI, CD ...</td>
+          <td>SOLID, Functional, DDD, OOP, CI, CD ...</td>
         </tr>
         <tr>
           <td>Relocate - ok</td>
-          <td>Frontend skills: HTML, Grids, React, Vue, Canvas, Animation, SVG ..</td>
+          <td>Frontend skills: HTML, Grids, React, Vue, Webassembly ..</td>
         </tr>
         <tr>
           <td>GitHub <a href="https://github.com/youaresofunny">@youaresofunny</a></td>
-          <td>DBs and Brokers: Postgres, Mysql, Mongo, NSQ, Redis, RabbitMQ</td>
+          <td>DBs and Brokers: Postgres, Cassandra, Mongo, NSQ, Redis, RabbitMQ ..</td>
         </tr>
         <tr>
           <td>Telegram <a href="https://t.me/iamgig">@iamgig</a></td>
@@ -50,79 +49,89 @@
         </tr>
         <tr>
           <td>Email <a href="mailto:anlopan@gmail.com">anlopan@gmail.com</a></td>
-          <td>Research, Opensource</td>
+          <td>Research, Opensource, Reverse engineering</td>
         </tr>
       </tbody>
     </table>
+    <br/><br/><br/><br/>
     <h4 id="timeline">Timeline</h4>
     <ul>
       <li>
-        <p>2011 <a href="http://elarea.ru">elarea.ru</a> - <strong>full-stack developer</strong></p>
+        <p><strong>2022 Go Backend Engineer</strong> at <a href="https://mercuryo.io/" target="_blank">Mercuryo.io</a></p>
         <ul>
-          <li>Custom PHP E-Commerce framework development</li>
-          <li>Responsive HTML, Css, jQuery</li>
-          <li>Infrastructure administration ( ftp mostly )</li>
+          <li>Integration tests</li>
+          <li>Refactoring</li>
+          <li>Maintenance</li>
+          <li>Migration from postgres to Amazon keyspaces</li>
         </ul>
       </li>
       <li>
-        <p>2012-2013 <a href="http://etagi.com">etagi.com</a> <strong>full-stack developer</strong></p>
+        <p><strong>2020-2021 Principal Full Stack Engineer</strong> at <a href="https://peerboard.com" target="_blank">Peerboard</a></p>
         <ul>
-          <li>Wordpress based enterprise ACM system development</li>
-          <li>Business process automation and optimization</li>
-          <li>Manage tasks for freelancers</li>
+          <li>Developed platform from scratch (Go, GraphQL, Typescript, React)</li>
+          <li>Conducted research on embedded site technologies</li>
+          <li>Developed domain connect automation</li>
         </ul>
       </li>
       <li>
-        <p>2014 <a href="http://Site4all.ru">Site4all.ru</a> <strong>project manager</strong></p>
+        <p><strong>2019 Tech lead</strong> at Benice.tools</p>
         <ul>
-          <li>Managing small web development teams (up to 5 people )</li>
-          <li>Prototyping</li>
-          <li>Flow management [Client brief -&gt; Design -&gt; Programming -&gt; Content]</li>
+          <li>Invented new way to perform Telegram bots</li>
+          <li>Communicated with open source communities (Binance, Telegram)</li>
+          <li>Administered infrastructure (10 services with replication, Kubernetes)</li>
         </ul>
       </li>
       <li>
-        <p>2014 <a href="http://Netology.ru">Netology.ru</a> <strong>Full-stack developer</strong></p>
+        <p><strong>2016-2019 Tech lead</strong> at <a href="https://github.com/Trendever" target="_blank">Trendever</a> &amp; <a href="https://github.com/TrustyFund" target="_blank">Trusty.fund</a></p>
         <ul>
-          <li>Partner cabinet development</li>
+          <li>Led development and code review (Go, Vue, Nodejs)</li>
+          <li>Recruited new talent</li>
+          <li>Communicated with open source communities (Bitshares, Instagram)</li>
+          <li>Performed reverse engineering of the Instagram private API</li>
+          <li>Administered infrastructure (15 services, Docker)</li>
         </ul>
       </li>
       <li>
-        <p>2015 ICONIC mobile <strong>Techincal lead</strong></p>
+        <p><strong>2015 Technical Lead</strong> at ICONIC Mobile</p>
         <ul>
-          <li>Full stack mobile apps development (Android, Spring, Erlang, C++)</li>
-          <li>Manage freelancers</li>
-          <li>Infrastructure administration ( git hosting, ssh, daemons )</li>
+          <li>Developed full stack mobile apps for Android, Spring, Erlang, and C++</li>
+          <li>Managed freelancers</li>
+          <li>Administered infrastructure (Git hosting, SSH, daemons)</li>
         </ul>
       </li>
       <li>
-        <p>2016-2019 Trendever &amp; Trusty.fund <strong>CTO</strong></p>
+        <p><strong>2014 Full-stack Developer</strong> at Netology.ru</p>
         <ul>
-          <li>Lead development and code review (Golang, Vue, Nodejs)</li>
-          <li>Recruiting</li>
-          <li>Communicate with open source communities (Bitshares, Instagram)</li>
-          <li>Reverse Engenering ( instagram private api)</li>
-          <li>Infrastructure administration ( 15 services, docker )</li>
+          <li>Developed partner cabinets</li>
         </ul>
       </li>
       <li>
-        <p>2019 Benice.tools <strong>CTO</strong></p>
+        <p><strong>2014 Project Manager</strong> at Site4all.ru</p>
         <ul>
-          <li>New way to perform telegram bots invented</li>
-          <li>Communicate with open source communities (Binance, Telegram)</li>
-          <li>Infrastructure administration ( 10 services with replication, kubernetes )</li>
+          <li>Managed small web development teams (up to 5 people)</li>
+          <li>Prototyped web projects</li>
+          <li>Managed flow (Client brief -&gt; Design -&gt; Programming -&gt; Content)</li>
         </ul>
       </li>
       <li>
-        <p>2020-2021 <a href="https://peerboard.com">Peerboard</a> <strong>Principal full stack engineer</strong></p>
+        <p><strong>2012-2013 Full-stack Developer</strong> at Etagi.com</p>
         <ul>
-          <li>Develop platform from scratch (Go, GraphQL, Typescript React)</li>
-          <li>Embed site technologies research</li>
-          <li>Domain connect automatization</li>
+          <li>Developed Wordpress-based enterprise ACM systems</li>
+          <li>Optimized business processes</li>
+          <li>Managed tasks for freelancers</li>
+        </ul>
+      </li>
+      <li>
+        <p><strong>2011 Full-stack Developer</strong> at Elarea.ru</p>
+        <ul>
+          <li>Developed custom PHP e-commerce frameworks</li>
+          <li>Created responsive HTML, CSS, and jQuery</li>
+          <li>Administered infrastructure (mostly FTP)</li>
         </ul>
       </li>
     </ul>
+    <br/>
     <h4 id="extras">Extras</h4>
-
     <table>
       <thead>
         <tr>
@@ -146,7 +155,7 @@
           <td>Strong Analyst</td>
         </tr>
         <tr>
-          <td>Indonesian waste problem solve <a href="https://github.com/MPH-Bali">participation</a></td>
+          <td>Have tried to solve indonesian <a href="https://github.com/MPH-Bali">garbage pollution problem</a></td>
           <td>Motivation over results</td>
         </tr>
       </tbody>
