--- a/index.html
+++ b/index.html
@@ -57,7 +57,16 @@
     <h4 id="timeline">Timeline</h4>
     <ul>
       <li>
-        <p><strong>2022 Go Backend Engineer</strong> at <a href="https://mercuryo.io/" target="_blank">Mercuryo.io</a></p>
+        <p><strong>Aug 2022 - June 2023 Go Backend Engineer</strong> at <a href="https://fluid.ch/" target="_blank">Fluid.ch</a></p>
+        <ul>
+          <li>Partners api integration (Currencycloud, Complyadvantage, Sumsub, Genesis)</li>
+          <li>Arbitrum and Eth mainnet contracts integration</li>
+          <li>Refactoring (moved key processes to temporal.io workflows)</li>
+          <li>Integration tests</li>
+        </ul>
+      </li>
+      <li>
+        <p><strong>Jan - Aug 2022 Go Backend Engineer</strong> at <a href="https://mercuryo.io/" target="_blank">Mercuryo.io</a></p>
         <ul>
           <li>Integration tests</li>
           <li>Refactoring</li>
